workspace = { members = ["rad_host_playback", "rad_compositor", "rad_net_stream", "rad_dbg_udp_reciever"] }
[package]
name = "rad"
authors = ["Arman Salimi Moghadam"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# opt-level = ""
lto = "fat"

[dependencies]
rad_host_playback = { path = "./rad_host_playback" }
rad_net_stream = { path = "./rad_net_stream" }
rad_compositor = { path = "./rad_compositor" }

clap = { version = "4.4.14", features = ["derive", "env"] }
log = "0.4.20"
simple_logger = "5.0.0"
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
