workspace = { members = ["rad_host_playback", "rad_compositor", "rad_net_stream", "rad_dbg_udp_reciever"] }
[package]
name = "rad"
repository = "https://github.com/Arman-sm/rad"
readme = "./README.md"
license-file = "./LICENSE"
authors = ["Arman Salimi Moghadam"]
version = "0.3.0"
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
rad_host_playback = { path = "./rad_host_playback" }
rad_net_stream = { path = "./rad_net_stream" }
rad_compositor = { path = "./rad_compositor" }

clap = { version = "4.5.16", features = ["derive", "env"] }
log = "0.4.20"
simple_logger = "5.0.0"
toml = "0.8.19"
serde = { version = "1.0.209", features = ["derive"] }
