[package]
name = "rad_net_stream"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
rad_compositor = { path = "../rad_compositor" }
byteorder = "1.5.0"
# tungstenite = "0.23.0" // For websocket